--- a/poprox/CHANGELOG
+++ b/poprox/CHANGELOG
@@ -1,4 +1,8 @@
+2015-Feb-05 v2.3.1
+* Resource files renamed to better support file-compare-merge updates.
+* SqlBuilder class handles more complex cases.
 2014-Nov-25 v2.3.0
+* Scoring API added in January 2015 before this version rolled out.
 * Added support for versioning the website.
 * Changed <code>data-*</code> classes to <code>db-*</code> to avoid HTML5 class collisions.
 * Added support for automatic website db schema changes.
