framework update:  FileUtils::force_file_contents bugfix; change password bugfix; Director::getFullURL() method adds domain and full path (current methods omit domain); site_logo_src() used instead of a static file name so that same code can be used in multiple virtual hosts and yet display different logos; OutputToCSV can now utilize a PDOStatement as input instead of just an array; WEBAPP_NAMESPACE now defined inside appdefines.php where all custom site defines should go; results_as_csv.php view outputs straight to output stream rather than to string which needs to be printed (less memory used); Admin websiteStatus page adds a button to create missing tables in case your database is an import or partial backup.

--- a/poprox/CHANGELOG
+++ b/poprox/CHANGELOG
@@ -1,3 +1,5 @@
+2015-Apr-08 v2.3.3
+* Framwork update (bugfixes)
 2015-Mar-24 v2.3.3
 * Fixed bug in deprecated Uncharted login.
 2015-Mar-18 v2.3.2
