--- a/poprox/CHANGELOG
+++ b/poprox/CHANGELOG
@@ -1,3 +1,5 @@
+2015-May-12 v2.3.6
+* MEM-514 - fix Source display issue for a Source with many thousands of attributes to display with a pager.
 2015-May-09 v2.3.5
 * MEM-514 - fix out of memory error when retrieving Source data for display.
 2015-Apr-17 v2.3.4
