--- a/poprox/CHANGELOG
+++ b/poprox/CHANGELOG
@@ -1,3 +1,5 @@
+2015-July-08 v2.3.8
+* Framework update which allows for more fine control over mobile authentication.
 2015-June-16 v2.3.7
 * Framework update which fixes website Settings not getting updated issue.
 * Framework update which adds HTTP_X_FORWARDED_PROTO header to detect HTTPS use.
