fix ConfigSettingInfo costume class to return strings for checkbox settings since ('0' !== 0), which caused a malfunction when saving checkbox related settings; also removed all leading backslashes from "use \MyCustom\Class;" lines as they are unnecessary and in more recent versions of PHP; added more PhpDocumentation to vars in Director and also implemented a logfile function in Director for generating logfiles.

--- a/poprox/CHANGELOG
+++ b/poprox/CHANGELOG
@@ -1,4 +1,5 @@
-2015-July-08 v2.3.8
+2015-July-10 v2.3.8
+* Framework update which fixes checkbox settings not saving correctly.
 * Framework update which allows for more fine control over mobile authentication.
 2015-June-16 v2.3.7
 * Framework update which fixes website Settings not getting updated issue.
